# High-Precision-Congestion-Control-Plus

./: .dockerignore  .gitignore  AGENT_HANDOFF.md  ANALYSIS_INDEX.md  CWND_RTT_QUICK_REFERENCE.md  Dockerfile  FUTURE_WORK.md  HPCC_ALGORITHM_DETAILED.md  HPCC_PLUS_README.md  PLOT_IMPROVEMENTS_SUMMARY.md  PYBINDGEN_EXPLAINED.md  README.md  RESULTS_ORGANIZATION.md  TECHNICAL_ANALYSIS.md  TS_HPCC_PLUS_IMPLEMENTATION.md  VISUALIZATION_GUIDE.md  docker-compose.yml  pyproject.toml
.agent/workflows/: run-hpcc-research.md
.devcontainer/: devcontainer.json
analysis/: README.md
presentation/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
results/: FAT_TREE_K4_RESULTS.md  INDEX.md  PLOTTING_GUIDE.md  QUICKSTART.sh  README.md  TOPOLOGY_VISUALIZATIONS.md  VISUALIZATIONS.md  organize_results.py  run_all_plots.py
results/data/: config_fat_k4.txt  config_two_senders.txt  fat_k4_true.txt
results/scripts/: PLOT_CWND_RTT_ANALYSIS_README.md  R_delivered_vs_txRate.py  _tmp_elephants_rx_kb.py  _tmp_fct_comparison_elephants.py  _tmp_fct_comparison_elephants_v2.py  _tmp_fct_comparison_mice_elephants.py  _tmp_fct_comparison_mice_elephants_v2.py  _tmp_mice_and_elephants_rx_kb.py  gen_fat_tree.py  plot_ack_analysis.py  plot_ack_analysis_interactive.py  plot_cwnd.py  plot_cwnd_rtt_analysis.py  plot_dashboard.py  plot_fattree_hierarchy.py  plot_fattree_smart.py  plot_fct.py  plot_interactive_dashboard.py  plot_packet_drops.py  (+12 more)
simulation/: .lock-waf_linux_build  build.sh  build_log.txt  run.py  run.sh  waf_bypass.py  wscript  wutils.py
tests/: test_workflow.py
(+396 files in other folders)
